Adds additional pages

--- a/hiring-operations-manager.html
+++ b/hiring-operations-manager.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Foreigneers | Terms of Service</title>
+    <title>Foreigneers | Hiring</title>
     <meta name="description" content="blank">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/config/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/config/favicon-32x32.png">
@@ -29,9 +29,11 @@
     <meta name=”twitter:description” content="blank" />
     <meta name=”twitter:image” content="./assets/config/android-chrome-512x512.png" />
     <link rel="stylesheet" href="./css/style.css">
+
+
 </head>
 
-<body class="body__bg-white">
+<body>
     <header class="header">
         <div class="header__container container">
             <div class="header__logo">
@@ -81,97 +83,92 @@
         </div>
     </header>
     <ul class="mobile__menu-list">
-        <li class="mobile__menu-item">
-            <a href="#about" class="mobile__menu-link">About Us</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#features" class="mobile__menu-link">Features</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#platforms" class="mobile__menu-link">Platforms</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#progress" class="mobile__menu-link">Progress</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#demo" class="mobile__menu-link">Demo</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#donate" class="mobile__menu-link">Donate</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="./signin.html" class="mobile__menu-link">Login</a>
-        </li>
+        <li class="mobile__menu-item"> <a href="#about" class="mobile__menu-link">About Us</a> </li>
+        <li class="mobile__menu-item"> <a href="#features" class="mobile__menu-link">Features</a> </li>
+        <li class="mobile__menu-item"> <a href="#platforms" class="mobile__menu-link">Platforms</a> </li>
+        <li class="mobile__menu-item"> <a href="#progress" class="mobile__menu-link">Progress</a> </li>
+        <li class="mobile__menu-item"> <a href="#demo" class="mobile__menu-link">Demo</a> </li>
+        <li class="mobile__menu-item"> <a href="#donate" class="mobile__menu-link">Donate</a> </li>
+        <li class="mobile__menu-item"> <a href="./signin.html" class="mobile__menu-link">Login</a> </li>
     </ul>
     <main class="container">
-        <section class="section__text">
-            <h2 class="heading__secondary--3 margin__bottom--medium">
-                Terms and Privacy Policy
-            </h2>
-            <p class="text__primary--1 margin__bottom--small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, eum dolorem! Nostrum, nemo. Ratione
-                facilis labore deserunt dolores fugiat commodi asperiores, odio architecto ipsam sequi nobis
-                exercitationem delectus hic consequatur repudiandae reprehenderit minus dolore assumenda laudantium
-                ducimus officia nihil dignissimos praesentium omnis. Expedita dicta alias mollitia eveniet
-                necessitatibus deserunt velit porro accusamus. Ex autem recusandae expedita similique nostrum, nemo
-                dolorum libero possimus laudantium repellendus in. Voluptates delectus cupiditate adipisci esse sed.
-            </p>
-            <p class="text__primary--1 bold margin__bottom--small">
-                Lorem, ipsum dolor.
-            </p>
-            <p class="text__primary--1 margin__bottom-small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
-                voluptatibus
-                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
-                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
-                porro
-                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
-                iusto
-                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
-                delectus
-                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
-                libero
-                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
-                dolorum at.
-            </p>
-            <p class="text__primary--1 bold margin__bottom--small">
-                Lorem, ipsum dolor.
-            </p>
-            <p class="text__primary--1 margin__bottom-small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
-                voluptatibus
-                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
-                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
-                porro
-                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
-                iusto
-                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
-                delectus
-                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
-                libero
-                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
-                dolorum at.
-            </p>
-            <p class="text__primary--1 bold margin__bottom--small">
-                Lorem, ipsum dolor.
-            </p>
-            <p class="text__primary--1 margin__bottom-small">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
-                voluptatibus
-                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
-                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
-                porro
-                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
-                iusto
-                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
-                delectus
-                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
-                libero
-                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
-                dolorum at.
-            </p>
+        <div class="card__container">
+            <div class="card__container--top">
+                <div class="card__container--heading">
+                    <h3 class="heading__tertiary heading__tertiary--1">Operations Manager</h3>
+                </div>
+            </div>
+            <div class="card__container--body padding__large">
 
-        </section>
+                <h4 class="heading__tertiary heading__tertiary--2 margin__small">Non velit quis aliquam.</h4>
+                <p class="text__primary margin__small">Illo rem voluptatibus. Ipsam perspiciatis voluptatem corrupti aut
+                    tempora
+                    accusantium. Quibusdam deleniti aut. Et maxime numquam quia itaque in. Commodi mollitia quo nisi
+                    saepe qui repudiandae. Vero impedit ullam dicta sit ab vel ut.</p>
+
+                <h5 class="heading__secondary heading__secondary--1 margin__small">Sit perspiciatis rem deserunt.</h5>
+                <blockquote class="blockquote margin__small">
+                    Fuga ipsum neque. Reiciendis dignissimos sapiente. Commodi aut adipisci et error. Delectus ratione
+                    iusto cum consequuntur provident explicabo tempora est id. Neque rerum porro et assumenda nulla
+                    quidem.
+                </blockquote>
+                <p class="text__primary margin__small">
+                    Beatae est maiores rem officia sit cumque mollitia assumenda temporibus. Facilis nesciunt quia
+                    voluptatem a et sint omnis deserunt totam. Numquam qui eum non alias blanditiis. Voluptatum et
+                    voluptatem distinctio illum blanditiis.
+                </p>
+                <p class="text__primary margin__small">
+                    Non modi perspiciatis. Vel sapiente dolorem. Natus quia ver id.
+                </p>
+                <h4 class="heading__tertiary heading__tertiary--2 margin__small">Sed nisi quis nam assumenda animi natus
+                    impedit dolorem alias.</h4>
+                <p class="text__primary margin__small">Illo rem voluptatibus. Ipsam perspiciatis voluptatem corrupti aut
+                    tempora
+                    accusantium. Quibusdam deleniti aut. Et maxime numquam quia itaque in. Commodi mollitia quo nisi
+                    saepe qui repudiandae. Vero impedit ullam dicta sit ab vel ut.</p>
+
+                <h5 class="heading__secondary heading__secondary--1 margin__small">Sit perspiciatis rem deserunt.</h5>
+                <blockquote class="blockquote">
+                    Fuga ipsum neque. Reiciendis dignissimos sapiente. Commodi aut adipisci et error. Delectus ratione
+                    iusto cum consequuntur provident explicabo tempora est id. Neque rerum porro et assumenda nulla
+                    quidem.
+                </blockquote>
+                <p class="text__primary margin__small">
+                    Beatae est maiores rem officia sit cumque mollitia assumenda temporibus. Facilis nesciunt quia
+                    voluptatem a et sint omnis deserunt totam. Numquam qui eum non alias blanditiis. Voluptatum et
+                    voluptatem distinctio illum blanditiis.
+                </p>
+                <p class="text__primary margin__small">
+                    Non modi perspiciatis. Vel sapiente dolorem. Natus quia ver id.
+                </p>
+                <form class="flex--2 margin__large">
+                    <div class="heading__tertiary margin__bottom--medium">Get in touch with us</div>
+                    <div class="form__validation ">
+                        <div class="text__validation">Incorrect Username</div>
+                    </div>
+                    <div class="form__group--grid">
+                        <div class="form__group">
+                            <input type="text" name="name" class="form__input" placeholder="Name" id="">
+                        </div>
+                        <div class="form__group">
+                            <input type="email" name="email" class="form__input" placeholder="Email" id="">
+                        </div>
+
+
+                    </div>
+                    <div class="form__group form__group--3">
+                        <label for="resume" class="form__group-label">Click me to upload resume</label>
+                        <input type="file" name="organization" class="form__input-file" placeholder="Upload Resume"
+                            id="resume">
+                    </div>
+                    <div class="form__button u_center_text">
+                        <button type="submit" class="btn btn__form uppercase">Send Resume</button>
+                    </div>
+                </form>
+
+
+            </div>
+        </div>
 
     </main>
     <footer class="footer">
@@ -191,13 +188,13 @@
                         <a href="./get-in-contact.html" class="footer__link">Get in contact</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./terms-and-privacy-policy.html" class="footer__link">Privacy</a>
+                        <a href="./privacy.html" class="footer__link">Privacy</a>
                     </li>
                     <li class="footer__item">
                         <a href="./hiring.html" class="footer__link">Hiring</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./terms-and-privacy-policy.html" class="footer__link">Terms of Service</a>
+                        <a href="./terms-of-service.html" class="footer__link">Terms of Service</a>
                     </li>
                     <li class="footer__item">
                         <a href="#" class="footer__link">Acceptable use policy</a>
@@ -248,7 +245,7 @@
 
     </footer>
 
+
 </body>
-<script src="./js/app.js"></script>
 
 </html>
