--- a/hiring.html
+++ b/hiring.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="body__bg-white">
+<body>
     <header class="header">
         <div class="header__container container">
             <div class="header__logo">
@@ -82,72 +82,133 @@
         </div>
     </header>
     <ul class="mobile__menu-list">
-        <li class="mobile__menu-item">
-            <a href="#about" class="mobile__menu-link">About Us</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#features" class="mobile__menu-link">Features</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#platforms" class="mobile__menu-link">Platforms</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#progress" class="mobile__menu-link">Progress</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#demo" class="mobile__menu-link">Demo</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="#donate" class="mobile__menu-link">Donate</a>
-        </li>
-        <li class="mobile__menu-item">
-            <a href="./signin.html" class="mobile__menu-link">Login</a>
-        </li>
+        <li class="mobile__menu-item"> <a href="#about" class="mobile__menu-link">About Us</a> </li>
+        <li class="mobile__menu-item"> <a href="#features" class="mobile__menu-link">Features</a> </li>
+        <li class="mobile__menu-item"> <a href="#platforms" class="mobile__menu-link">Platforms</a> </li>
+        <li class="mobile__menu-item"> <a href="#progress" class="mobile__menu-link">Progress</a> </li>
+        <li class="mobile__menu-item"> <a href="#demo" class="mobile__menu-link">Demo</a> </li>
+        <li class="mobile__menu-item"> <a href="#donate" class="mobile__menu-link">Donate</a> </li>
+        <li class="mobile__menu-item"> <a href="./signin.html" class="mobile__menu-link">Login</a> </li>
     </ul>
     <main class="container">
-        <section class="section__text">
-            <p class="text text__primary">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Morbi quis commodo odio aenean sed adipiscing diam donec adipiscing. Sit amet
-                porttitor eget dolor morbi non. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant
-                morbi tristique senectus. Diam maecenas ultricies mi eget mauris pharetra. Risus at ultrices mi tempus
-                imperdiet. Velit dignissim sodales ut eu sem integer vitae justo eget. At quis risus sed vulputate. Eu
-                non diam phasellus vestibulum lorem sed risus. Vel turpis nunc eget lorem dolor sed viverra. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
-        </section>
-        <section class="section__form">
-            <form class="flex--2 margin__bottom--medium">
-                <div class="heading__tertiary margin__bottom--medium">Reach out to us</div>
-                <div class="form__validation ">
-                    <div class="text__validation">Incorrect Username</div>
+        <div class="card__container">
+            <div class="card__container--top">
+                <div class="card__container--heading">
+                    <h3 class="heading__tertiary heading__tertiary--1">We need you</h3>
                 </div>
-                <div class="form__group form__group--3">
-                    <input type="text" name="name" class="form__input form__input--2" placeholder="Name" id="">
+            </div>
+            <div class="card__container--body">
+                <div class="card__container--text">
+                    <h4 class="heading__secondary">We are Hiring</h4>
+                    <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                        varius enim in eros
+                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                        commodo diam libero vitae erat. See our open positions below!</p>
                 </div>
-                <div class="form__group form__group--3">
-                    <input type="email" name="email" class="form__input form__input--2" placeholder="Email" id="">
-                </div>
+                <div class="grid-of-2 padding__large">
+                    <div class="card__job">
+                        <div class="card__img">
+                            <picture>
+                                <source srcset="./assets/img/settings.webp" type="image/webp">
+                                <source srcset="./assets/img/settings.png" type="image/png">
+                                <img src="./assets/img/settings.png" alt="">
+                            </picture>
 
 
-                <div class="form__group form__group--3">
-                    <input type="discord" name="discord" class="form__input form__input--2" placeholder="Discord" id="">
-                </div>
-                <div class="form__group--3">
-                    <select name="" id="" class="form__input-select form__input-select--1">
-                        <option value="option1">Option 1</option>
-                    </select>
-                </div>
-                <div class="form__button u_center_text margin__large">
-                    <button type="submit" class="btn btn__form uppercase">Contact Us</button>
-                </div>
+                        </div>
+                        <div class="card__text">
+                            <div class="card__job--title">
+                                <h5 class="text text__secondary text__secondary--1 bold">Operations Manager
+                                </h5>
+                            </div>
+                            <div class="card__job-description margin__medium">
+                                <p class="text text__primary text__primary--2">A talented Operations Manager to join our
+                                    team,
+                                </p>
+                            </div>
+                            <div class="card__job--btn ">
+                                <a href="./hiring-operations-manager.html" class="btn btn__form btn__form--1">Apply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__job">
+                        <div class="card__img">
+                            <picture>
+                                <source srcset="./assets/img/creative.webp" type="image/webp">
+                                <source srcset="./assets/img/creative.png" type="image/png">
+                                <img src="./assets/img/creative.png" alt="">
+                            </picture>
+                        </div>
+                        <div class="card__text">
+                            <div class="card__job--title">
+                                <h5 class="text text__secondary text__secondary--1 bold">Creative Director
+                                </h5>
+                            </div>
+                            <div class="card__job-description margin__medium">
+                                <p class="text text__primary text__primary--2"> A talented Creative Director to join our
+                                    team
+                                </p>
+                            </div>
+                            <div class="card__job--btn">
+                                <a href="./hiring-operations-manager.html" class="btn btn__form btn__form--1">Apply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__job">
+                        <div class="card__img">
+                            <picture>
+                                <source srcset="./assets/img/strategy.webp" type="image/webp">
+                                <source srcset="./assets/img/strategy.png" type="image/png">
+                                <img src="./assets/img/strategy.png" alt="">
+                            </picture>
+                        </div>
+                        <div class="card__text">
+                            <div class="card__job--title">
+                                <h5 class="text text__secondary text__secondary--1 bold">Chief Strategy Officer</h5>
 
-            </form>
+                            </div>
+                            <div class="card__job-description margin__medium">
+                                <p class="text text__primary--2"> A talented Chief Strategy Officer to join our team.
+                                </p>
 
-        </section>
+                            </div>
+                            <div class="card__job--btn">
+                                <a href="./hiring-operations-manager.html" class="btn btn__form btn__form--1">Apply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__job">
+                        <div class="card__img">
+                            <picture>
+                                <source srcset="./assets/img/sr-software-eng.webp" type="image/webp">
+                                <source srcset="./assets/img/sr-software-eng.png" type="image/png">
+                                <img src="./assets/img/sr-software-eng.png" alt="">
+                            </picture>
+
+                        </div>
+                        <div class="card__text">
+                            <div class="card__job--title">
+                                <h5 class="text text__secondary text__secondary--1 bold">Sr. Software Engineer
+                                </h5>
+
+                            </div>
+                            <div class="card__job-description margin__medium">
+                                <p class="text text__primary--2">A talented Sr. Software Engineer
+                                    Strategy Officer to join our team.</p>
+                            </div>
+                            <div class="card__job--btn">
+                                <a href="./hiring-operations-manager.html" class="btn btn__form btn__form--1">Apply</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+
     </main>
     <footer class="footer">
         <div class="container">
