--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Foreigneers | Get in Contact</title>
+    <title>Foreigneers | Terms of Service</title>
     <meta name="description" content="blank">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/config/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/config/favicon-32x32.png">
@@ -29,7 +29,6 @@
     <meta name=”twitter:description” content="blank" />
     <meta name=”twitter:image” content="./assets/config/android-chrome-512x512.png" />
     <link rel="stylesheet" href="./css/style.css">
-
 </head>
 
 <body class="body__bg-white">
@@ -104,29 +103,98 @@
             <a href="./signin.html" class="mobile__menu-link">Login</a>
         </li>
     </ul>
-
     <main class="container">
-        <form class="flex--2 margin__large">
-            <div class="heading__tertiary margin__bottom--medium">Get in contact with us</div>
-            <div class="form__validation ">
-                <div class="text__validation">Incorrect Username</div>
-            </div>
-            <div class="form__group form__group--3">
-                <input type="text" name="name" class="form__input form__input--2" placeholder="Name" id="">
-            </div>
-            <div class="form__group form__group--3">
-                <input type="email" name="email" class="form__input form__input--2" placeholder="Email" id="">
-            </div>
+        <section class="section__text">
+            <h2 class="heading__secondary--3 margin__bottom--medium">
+                Terms of Service
+            </h2>
+            <p class="text__primary--1 margin__bottom--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, eum dolorem! Nostrum, nemo. Ratione
+                facilis labore deserunt dolores fugiat commodi asperiores, odio architecto ipsam sequi nobis
+                exercitationem delectus hic consequatur repudiandae reprehenderit minus dolore assumenda laudantium
+                ducimus officia nihil dignissimos praesentium omnis. Expedita dicta alias mollitia eveniet
+                necessitatibus deserunt velit porro accusamus. Ex autem recusandae expedita similique nostrum, nemo
+                dolorum libero possimus laudantium repellendus in. Voluptates delectus cupiditate adipisci esse sed.
+            </p>
+            <p class="text__primary--1 bold margin__bottom--small">
+                Lorem, ipsum dolor.
+            </p>
+            <p class="text__primary--1 margin__bottom-small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
+                voluptatibus
+                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
+                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
+                porro
+                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
+                iusto
+                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
+                delectus
+                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
+                libero
+                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
+                dolorum at.
+            </p>
+            <ul class="list__primary">
+                <li class="list__primary-item">
+                    <p class="text__primary--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eos
+                        fuga totam aliquid eum at ab itaque possimus, cupiditate porro tempore tenetur natus explicabo
+                        quos autem. Unde, consequuntur. Eum, commodi.</p>
+                </li class="list__primary-item">
+                <li class="list__primary-item">
+                    <p class="text__primary--1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+                        consectetur animi quo laudantium, veritatis natus?</p>
+                </li>
+                <li class="list__primary-item">
+                    <p class="text__primary--1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+                        corrupti?</p>
+                </li>
+                <li class="list__primary-item">
+                    <p class="text__primary--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis numquam
+                        quae recusandae quis sit architecto voluptatibus, iure porro, velit obcaecati deserunt ipsa
+                        voluptatum dolor repellat, facilis aliquid impedit tempora officiis repellendus minus quos
+                        corporis magnam sunt adipisci? Non iusto odio quaerat quibusdam iure reiciendis unde recusandae
+                        assumenda saepe, in quis?</p>
+                </li>
 
-            <div class="form__group form__group--3">
-                <input type="text" name="organization" class="form__input form__input--2" placeholder="Organization"
-                    id="">
-            </div>
-            <div class="form__button u_center_text">
-                <button type="submit" class="btn btn__form uppercase">Contact Us</button>
-            </div>
-        </form>
+            </ul>
+            <p class="text__primary--1 bold margin__bottom--small">
+                Lorem, ipsum dolor.
+            </p>
+            <p class="text__primary--1 margin__bottom--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
+                voluptatibus
+                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
+                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
+                porro
+                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
+                iusto
+                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
+                delectus
+                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
+                libero
+                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
+                dolorum at.
+            </p>
+            <p class="text__primary--1 bold margin__bottom--small">
+                Lorem, ipsum dolor.
+            </p>
+            <p class="text__primary--1 margin__bottom--small">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates delectus officia
+                voluptatibus
+                sapiente, inventore illo consectetur, perspiciatis voluptate eos quas ad cum in veniam ab natus
+                temporibus dicta repellendus amet corporis quo. Soluta vitae iste sint illum ad! Velit quisquam
+                porro
+                nostrum alias sint asperiores quia assumenda esse vel earum nesciunt hic ipsam quis, ad commodi
+                iusto
+                aut consectetur aliquid. Accusamus ipsa perferendis quis? Beatae omnis eveniet minus pariatur
+                delectus
+                maxime numquam deserunt non quidem autem impedit suscipit natus quaerat exercitationem voluptates
+                libero
+                dolores praesentium assumenda, rerum incidunt odit. Vel minus, aperiam vitae voluptatum sed a modi
+                dolorum at.
+            </p>
 
+        </section>
 
     </main>
     <footer class="footer">
@@ -202,6 +270,7 @@
         </div>
 
     </footer>
+
 </body>
 <script src="./js/app.js"></script>
 
