--- a/index.html
+++ b/index.html
@@ -447,13 +447,13 @@
                         <a href="./get-in-contact.html" class="footer__link">Get in contact</a>
                     </li>
                     <li class="footer__item">
-                        <a href="./terms-and-privacy-policy.html" class="footer__link">Privacy</a>
+                        <a href="./privacy.html" class="footer__link">Privacy</a>
                     </li>
                     <li class="footer__item">
                         <a href="./hiring.html" class="footer__link">Hiring</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Terms of Service</a>
+                        <a href="./terms-of-service.html" class="footer__link">Terms of Service</a>
                     </li>
                     <li class="footer__item">
                         <a href="#" class="footer__link">Acceptable use policy</a>
