--- a/get-in-contact.html
+++ b/get-in-contact.html
@@ -106,7 +106,7 @@
     </ul>
 
     <main>
-        <div class="u_center_text margin__bottom--medium">
+        <div class="u_center_text margin__medium">
             <h2 class="heading__tertiary uppercase">Have some questions?</h3>
         </div>
         <div class="u_center_text margin__bottom--large">
